@@ -1,5 +1,10 @@
 2007-04-11  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php, class.scorerender.inc.php:
+	Supports restricting maximum length per fragment.
+
+2007-04-11  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php:
 	Drop support for configurable markup, people probably don't need that.
 
